--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container fixed-bottom">
             <div class="row">
                 <div class="col-12">
-                    ZZZZZZZ
+                    XXXXXXXXXXXXXXXXXXX
                 </div>
             </div>
         </div>
