Inclusão de fonte icomoon

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                     <div class="col-12 px-0">
                         <div class="banner-text p-3">
                             <h1>Cliente Nextel tem desconto especial no Certificado Digital</h1>
+                            <span class="icon-ecpf txt-blue f-size-100 line-height-0"></span>
+                            <span class="icon-ecnpj txt-orange f-size-100 line-height-0"></span>
                         </div>
                     </div>
                 </div>
