Criação dos componetes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nextel - Parceria Certisign</title>
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/styles/owl.carousel.css">
+    <link rel="stylesheet" href="assets/styles/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/font/fa5/css/all.css">
     <link rel="stylesheet" href="assets/styles/style.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
@@ -20,35 +23,130 @@
                         <span class="pipe"></span>
                         <p>Parceria Certisign</p>
                     </div>
-                    <a class="btn btn-sm btn-dark" href="#" title="Compre agora">Compre agora</a>
+                    <a class="btn-default sm dark m-0" href="#" title="Compre agora">Compre agora</a>
                 </div>
             </div>
         </div>
     </header>
 
-
     <main>
         <section>
-            <div class="container banner px-0">
+            <div class="container banner px-0 mb-3">
                 <div class="row px-0 mx-0">
                     <div class="col-12 px-0">
                         <div class="banner-text p-3">
-                            <h1>Cliente Nextel tem desconto especial no Certificado Digital</h1>
-                            <span class="icon-ecpf txt-blue f-size-100 line-height-0"></span>
-                            <span class="icon-ecnpj txt-orange f-size-100 line-height-0"></span>
+                            <h1 class="mb-md-4">Cliente Nextel tem desconto especial no Certificado Digital e-CNPJ da Certisign.</h1>
+                            <span class="icon-ecnpj txt-orange f-size-100 line-height-0"><span class="d-none">e-CNPJ</span></span>
+                            <h6>Certificado Digital CERTISIGN</h6>
+                            <p class="prod-value"><span class="txt-black">Por apenas <span class="txt-detach">10x <span>R$ </span></span></span><span class="txt-orange">18<sup>,00</sup></span></p>
+                            <a class="btn-default d-block w-100" href="#" title="Compre agora">Compre agora</a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container facilities mb-3">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h2 class="mb-5">Conhece as facilidades de ter um e-CNPJ?</h2>
+                        <p class="mb-5">O e-CNPJ é a ​<strong>Identidade Digital da Pessoa Jurídica</strong> ​que agiliza a autenticação em sistemas públicos ou privados da sua empresa. Veja essas facilidades:</p>
+                        <div class="box">
+                            <div>
+                                <img src="assets/images/icone/ico-juridico.png" alt="Validade jurídica">
+                                <h3>Validade Jurídica</h3>
+                                <p>Assine documento digitalmente.</p>
+                            </div>
+                            <div>
+                                <img src="assets/images/icone/ico-receita-federal.png" alt="Receita Federal">
+                                <h3>Receita Federal</h3>
+                                <p>Consulta e comunicação mais rápidas.</p>
+                            </div>
+                            <div>
+                                <img src="assets/images/icone/ico-nfe.png" alt="Nota Fiscal Eletrônica">
+                                <h3>Nota Fiscal Eletrônica</h3>
+                                <p>Praticidade na emissão de ​NF-e​ e ​NFC-e.</p>
+                            </div>
+                            <div>
+                                <img src="assets/images/icone/ico-esocial.png" alt="Conectividade Social">
+                                <h3>Conectividade Social</h3>
+                                <p>Agilidade no acesso deste programa.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container cards pt-5 mb-5">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="mb-5">Por que contratar pela Certisign é mais seguro?</h2>
+                        <div class="owl-slider mb-5">
+                            <div class="owl-carousel owl-theme" id="carousel">
+                                <div class="item px-3">
+                                    <div class="card">
+                                        <img src="assets/images/icone/ico-brasil.png" alt="Ampla rede de atendimento">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Ampla rede de atendimento</h5>
+                                            <p>A Certisign conta com mais de 1.800 locais de atendimento espalhados pelo Brasil (e até no exterior).</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item px-3">
+                                    <div class="card">
+                                        <img src="assets/images/icone/ico-atendimento.png" alt="Suporte ao cliente">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Suporte ao cliente</h5>
+                                            <p>Teve algum problema? A Certisign resolve com suporte especializado de excelência comprovada.*</p>
+                                            <p class="small">* Pesquisa "As Empresas mais Inovadoras no Relacionamento com o Cliente".</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item px-3">
+                                    <div class="card">
+                                        <img src="assets/images/icone/ico-ecommerce.png" alt="Clube de vantagens">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Clube de vantagens</h5>
+                                            <p>Com o Certificado Digital Certisign, você acessa descontos exclusivos nos maiores e-commerces do país.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="btn-default d-block w-100" href="#" title="Compre agora">COMPRE AGORA O SEU E-CNPJ</a>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-
     <footer>
-        <div class="container fixed-bottom">
+        <div class="container py-5">
             <div class="row">
-                <div class="col-12">
-                    XXXXXXXXXXXXXXXXXXX
+                <div class="col-12 text-center">
+                    <div class="mb-5">
+                        <h4>Atendimento e Dúvidas</h4>
+                        <p>São Paulo: (11) 3478-9444</p>
+                        <p>Demais localidades: 0300-789-2378</p>
+                        <p>Horário: Segunda à sexta, das 8h às 20h (exceto feriados)</p>
+                    </div>
+                    <div class="mb-5 d-flex justify-content-around documents">
+                        <div>
+                            <i class="far fa-file-alt"></i>
+                            <p>Documentação Necessária</p>
+                        </div>
+                        <div>
+                            <i class="far fa-calendar"></i>
+                            <p>Agende sua Validação</p>
+                        </div>
+                    </div>
+                    <div>
+                        <h6>Parceria com</h6>
+                        <img class="border border-white rounded p-3" src="assets/images/logo/logo-certisign.png" alt="Logo Certisign">
+                    </div>
                 </div>
             </div>
         </div>
@@ -57,5 +155,7 @@
     <script src="assets/scripts/jquery-3.2.1.min.js"></script>
     <script src="assets/scripts/popper.min.js"></script>
     <script src="assets/scripts/bootstrap.js"></script>
+    <script src="assets/scripts/owl.carousel.js"></script>
+    <script src="assets/scripts/owl.carousel-init.js"></script>
 </body>
 </html>
