Finalização do hotsite

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <div class="container pt-3 fixed-top">
+        <div class="container-fluid pt-3 fixed-top px-lg-5">
             <div class="row">
                 <div class="col-12 d-flex justify-content-between">
                     <div class="logo d-flex align-items-center">
@@ -31,15 +31,15 @@
 
     <main>
         <section>
-            <div class="container banner px-0 mb-3">
+            <div class="container-fluid banner px-0 mb-3 px-lg-5">
                 <div class="row px-0 mx-0">
                     <div class="col-12 px-0">
-                        <div class="banner-text p-3">
-                            <h1 class="mb-md-4">Cliente Nextel tem desconto especial no Certificado Digital e-CNPJ da Certisign.</h1>
+                        <div class="banner-text p-3 px-xl-5">
+                            <h1 class="mb-md-3">Cliente Nextel tem desconto especial no Certificado Digital e-CNPJ da Certisign.</h1>
                             <span class="icon-ecnpj txt-orange f-size-100 line-height-0"><span class="d-none">e-CNPJ</span></span>
                             <h6>Certificado Digital CERTISIGN</h6>
                             <p class="prod-value"><span class="txt-black">Por apenas <span class="txt-detach">10x <span>R$ </span></span></span><span class="txt-orange">18<sup>,00</sup></span></p>
-                            <a class="btn-default d-block w-100" href="#" title="Compre agora">Compre agora</a>
+                            <a class="btn-default d-block w-100 w-md-75" href="#" title="Compre agora">Compre agora</a>
                         </div>
                     </div>
                 </div>
@@ -47,31 +47,37 @@
         </section>
 
         <section>
-            <div class="container facilities mb-3">
+            <div class="container-fluid facilities mb-3">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h2 class="mb-5">Conhece as facilidades de ter um e-CNPJ?</h2>
-                        <p class="mb-5">O e-CNPJ é a ​<strong>Identidade Digital da Pessoa Jurídica</strong> ​que agiliza a autenticação em sistemas públicos ou privados da sua empresa. Veja essas facilidades:</p>
-                        <div class="box">
-                            <div>
-                                <img src="assets/images/icone/ico-juridico.png" alt="Validade jurídica">
-                                <h3>Validade Jurídica</h3>
-                                <p>Assine documento digitalmente.</p>
-                            </div>
-                            <div>
-                                <img src="assets/images/icone/ico-receita-federal.png" alt="Receita Federal">
-                                <h3>Receita Federal</h3>
-                                <p>Consulta e comunicação mais rápidas.</p>
-                            </div>
-                            <div>
-                                <img src="assets/images/icone/ico-nfe.png" alt="Nota Fiscal Eletrônica">
-                                <h3>Nota Fiscal Eletrônica</h3>
-                                <p>Praticidade na emissão de ​NF-e​ e ​NFC-e.</p>
-                            </div>
-                            <div>
-                                <img src="assets/images/icone/ico-esocial.png" alt="Conectividade Social">
-                                <h3>Conectividade Social</h3>
-                                <p>Agilidade no acesso deste programa.</p>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12 text-center">
+                                    <h2 class="mb-5">Conhece as facilidades de ter um e-CNPJ?</h2>
+                                    <p class="mb-5">O e-CNPJ é a ​<strong>Identidade Digital da Pessoa Jurídica</strong> ​que agiliza a autenticação em sistemas públicos ou privados da sua empresa. Veja essas facilidades:</p>
+                                    <div class="box">
+                                        <div>
+                                            <img src="assets/images/icone/ico-juridico.png" alt="Validade jurídica">
+                                            <h3>Validade Jurídica</h3>
+                                            <p>Assine documento digitalmente.</p>
+                                        </div>
+                                        <div>
+                                            <img src="assets/images/icone/ico-receita-federal.png" alt="Receita Federal">
+                                            <h3>Receita Federal</h3>
+                                            <p>Consulta e comunicação mais rápidas.</p>
+                                        </div>
+                                        <div>
+                                            <img src="assets/images/icone/ico-nfe.png" alt="Nota Fiscal Eletrônica">
+                                            <h3>Nota Fiscal Eletrônica</h3>
+                                            <p>Praticidade na emissão de ​NF-e​ e ​NFC-e.</p>
+                                        </div>
+                                        <div>
+                                            <img src="assets/images/icone/ico-esocial.png" alt="Conectividade Social">
+                                            <h3>Conectividade Social</h3>
+                                            <p>Agilidade no acesso deste programa.</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -80,43 +86,49 @@
         </section>
 
         <section>
-            <div class="container cards pt-5 mb-5">
+            <div class="container-fluid cards pt-5 mb-5">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="mb-5">Por que contratar pela Certisign é mais seguro?</h2>
-                        <div class="owl-slider mb-5">
-                            <div class="owl-carousel owl-theme" id="carousel">
-                                <div class="item px-3">
-                                    <div class="card">
-                                        <img src="assets/images/icone/ico-brasil.png" alt="Ampla rede de atendimento">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Ampla rede de atendimento</h5>
-                                            <p>A Certisign conta com mais de 1.800 locais de atendimento espalhados pelo Brasil (e até no exterior).</p>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12 text-center">
+                                    <h2 class="mb-5">Por que contratar pela Certisign é mais seguro?</h2>
+                                    <div class="owl-slider mb-5">
+                                        <div class="owl-carousel owl-theme" id="carousel">
+                                            <div class="item px-3">
+                                                <div class="card">
+                                                    <img src="assets/images/icone/ico-brasil.png" alt="Ampla rede de atendimento">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title">Ampla rede de atendimento</h5>
+                                                        <p>A Certisign conta com mais de 1.800 locais de atendimento espalhados pelo Brasil (e até no exterior).</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="item px-3">
+                                                <div class="card">
+                                                    <img src="assets/images/icone/ico-atendimento.png" alt="Suporte ao cliente">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title">Suporte ao cliente</h5>
+                                                        <p>Teve algum problema? A Certisign resolve com suporte especializado de excelência comprovada.*</p>
+                                                        <p class="small">* Pesquisa "As Empresas mais Inovadoras no Relacionamento com o Cliente".</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="item px-3">
+                                                <div class="card">
+                                                    <img src="assets/images/icone/ico-ecommerce.png" alt="Clube de vantagens">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title">Clube de vantagens</h5>
+                                                        <p>Com o Certificado Digital Certisign, você acessa descontos exclusivos nos maiores e-commerces do país.</p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="item px-3">
-                                    <div class="card">
-                                        <img src="assets/images/icone/ico-atendimento.png" alt="Suporte ao cliente">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Suporte ao cliente</h5>
-                                            <p>Teve algum problema? A Certisign resolve com suporte especializado de excelência comprovada.*</p>
-                                            <p class="small">* Pesquisa "As Empresas mais Inovadoras no Relacionamento com o Cliente".</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="item px-3">
-                                    <div class="card">
-                                        <img src="assets/images/icone/ico-ecommerce.png" alt="Clube de vantagens">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Clube de vantagens</h5>
-                                            <p>Com o Certificado Digital Certisign, você acessa descontos exclusivos nos maiores e-commerces do país.</p>
-                                        </div>
-                                    </div>
+                                    <a class="btn-default d-block w-100 d-md-inline w-md-auto" href="#" title="Compre agora">COMPRE AGORA O SEU E-CNPJ</a>
                                 </div>
                             </div>
                         </div>
-                        <a class="btn-default d-block w-100" href="#" title="Compre agora">COMPRE AGORA O SEU E-CNPJ</a>
                     </div>
                 </div>
             </div>
@@ -124,28 +136,36 @@
     </main>
 
     <footer>
-        <div class="container py-5">
+        <div class="container-fluid py-5">
             <div class="row">
                 <div class="col-12 text-center">
-                    <div class="mb-5">
-                        <h4>Atendimento e Dúvidas</h4>
-                        <p>São Paulo: (11) 3478-9444</p>
-                        <p>Demais localidades: 0300-789-2378</p>
-                        <p>Horário: Segunda à sexta, das 8h às 20h (exceto feriados)</p>
-                    </div>
-                    <div class="mb-5 d-flex justify-content-around documents">
-                        <div>
-                            <i class="far fa-file-alt"></i>
-                            <p>Documentação Necessária</p>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 text-center">
+                                <div class="row">
+                                    <div class="mb-5 col-12 col-md-4 text-md-left">
+                                        <h4>Atendimento e Dúvidas</h4>
+                                        <p>São Paulo: (11) 3478-9444</p>
+                                        <p>Demais localidades: 0300-789-2378</p>
+                                        <p>Horário: Segunda à sexta, das 8h às 20h (exceto feriados)</p>
+                                    </div>
+                                    <div class="mb-5 col-12 col-md-4 d-flex justify-content-around documents">
+                                        <div>
+                                            <i class="far fa-file-alt"></i>
+                                            <p>Documentação Necessária</p>
+                                        </div>
+                                        <div>
+                                            <i class="far fa-calendar"></i>
+                                            <p>Agende sua Validação</p>
+                                        </div>
+                                    </div>
+                                    <div class="mb-0 col-12 col-md-4 text-md-right">
+                                        <h6 class="mr-md-5 pr-md-5">Parceria com</h6>
+                                        <img class="p-3" src="assets/images/logo/logo-certisign.png" alt="Logo Certisign">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div>
-                            <i class="far fa-calendar"></i>
-                            <p>Agende sua Validação</p>
-                        </div>
-                    </div>
-                    <div>
-                        <h6>Parceria com</h6>
-                        <img class="border border-white rounded p-3" src="assets/images/logo/logo-certisign.png" alt="Logo Certisign">
                     </div>
                 </div>
             </div>
