Finalização do hotsite

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nextel - Parceria Certisign</title>
-    <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/styles/owl.carousel.css">
-    <link rel="stylesheet" href="assets/styles/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/font/fa5/css/all.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/styles/owl.carousel.css">
+    <link rel="stylesheet" href="./assets/styles/owl.theme.default.min.css">
+    <link rel="stylesheet" href="./assets/font/fa5/css/all.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="icon" type="image/png" href="./assets/images/icone/favicon.png">
 </head>
 <body>
 
@@ -19,7 +20,7 @@
             <div class="row">
                 <div class="col-12 d-flex justify-content-between">
                     <div class="logo d-flex align-items-center">
-                        <img src="assets/images/logo/logo-nextel.png" alt="Logo Nextel">
+                        <img src="./assets/images/logo/logo-nextel.png" alt="Logo Nextel">
                         <span class="pipe"></span>
                         <p>Parceria Certisign</p>
                     </div>
@@ -57,22 +58,22 @@
                                     <p class="mb-5">O e-CNPJ é a ​<strong>Identidade Digital da Pessoa Jurídica</strong> ​que agiliza a autenticação em sistemas públicos ou privados da sua empresa. Veja essas facilidades:</p>
                                     <div class="box">
                                         <div>
-                                            <img src="assets/images/icone/ico-juridico.png" alt="Validade jurídica">
+                                            <img src="./assets/images/icone/ico-juridico.png" alt="Validade jurídica">
                                             <h3>Validade Jurídica</h3>
                                             <p>Assine documento digitalmente.</p>
                                         </div>
                                         <div>
-                                            <img src="assets/images/icone/ico-receita-federal.png" alt="Receita Federal">
+                                            <img src="./assets/images/icone/ico-receita-federal.png" alt="Receita Federal">
                                             <h3>Receita Federal</h3>
                                             <p>Consulta e comunicação mais rápidas.</p>
                                         </div>
                                         <div>
-                                            <img src="assets/images/icone/ico-nfe.png" alt="Nota Fiscal Eletrônica">
+                                            <img src="./assets/images/icone/ico-nfe.png" alt="Nota Fiscal Eletrônica">
                                             <h3>Nota Fiscal Eletrônica</h3>
                                             <p>Praticidade na emissão de ​NF-e​ e ​NFC-e.</p>
                                         </div>
                                         <div>
-                                            <img src="assets/images/icone/ico-esocial.png" alt="Conectividade Social">
+                                            <img src="./assets/images/icone/ico-esocial.png" alt="Conectividade Social">
                                             <h3>Conectividade Social</h3>
                                             <p>Agilidade no acesso deste programa.</p>
                                         </div>
@@ -97,7 +98,7 @@
                                         <div class="owl-carousel owl-theme" id="carousel">
                                             <div class="item px-3">
                                                 <div class="card">
-                                                    <img src="assets/images/icone/ico-brasil.png" alt="Ampla rede de atendimento">
+                                                    <img src="./assets/images/icone/ico-brasil.png" alt="Ampla rede de atendimento">
                                                     <div class="card-body">
                                                         <h5 class="card-title">Ampla rede de atendimento</h5>
                                                         <p>A Certisign conta com mais de 1.800 locais de atendimento espalhados pelo Brasil (e até no exterior).</p>
@@ -106,7 +107,7 @@
                                             </div>
                                             <div class="item px-3">
                                                 <div class="card">
-                                                    <img src="assets/images/icone/ico-atendimento.png" alt="Suporte ao cliente">
+                                                    <img src="./assets/images/icone/ico-atendimento.png" alt="Suporte ao cliente">
                                                     <div class="card-body">
                                                         <h5 class="card-title">Suporte ao cliente</h5>
                                                         <p>Teve algum problema? A Certisign resolve com suporte especializado de excelência comprovada.*</p>
@@ -116,7 +117,7 @@
                                             </div>
                                             <div class="item px-3">
                                                 <div class="card">
-                                                    <img src="assets/images/icone/ico-ecommerce.png" alt="Clube de vantagens">
+                                                    <img src="./assets/images/icone/ico-ecommerce.png" alt="Clube de vantagens">
                                                     <div class="card-body">
                                                         <h5 class="card-title">Clube de vantagens</h5>
                                                         <p>Com o Certificado Digital Certisign, você acessa descontos exclusivos nos maiores e-commerces do país.</p>
@@ -161,7 +162,7 @@
                                     </div>
                                     <div class="mb-0 col-12 col-md-4 text-md-right">
                                         <h6 class="mr-md-5 pr-md-5">Parceria com</h6>
-                                        <img class="p-3" src="assets/images/logo/logo-certisign.png" alt="Logo Certisign">
+                                        <img class="p-3" src="./assets/images/logo/logo-certisign.png" alt="Logo Certisign">
                                     </div>
                                 </div>
                             </div>
@@ -172,10 +173,10 @@
         </div>
     </footer>
 
-    <script src="assets/scripts/jquery-3.2.1.min.js"></script>
-    <script src="assets/scripts/popper.min.js"></script>
-    <script src="assets/scripts/bootstrap.js"></script>
-    <script src="assets/scripts/owl.carousel.js"></script>
-    <script src="assets/scripts/owl.carousel-init.js"></script>
+    <script src="./assets/scripts/jquery-3.2.1.min.js"></script>
+    <script src="./assets/scripts/popper.min.js"></script>
+    <script src="./assets/scripts/bootstrap.js"></script>
+    <script src="./assets/scripts/owl.carousel.js"></script>
+    <script src="./assets/scripts/owl.carousel-init.js"></script>
 </body>
 </html>
