Implementação de links no footer

--- a/index.html
+++ b/index.html
@@ -146,14 +146,18 @@
                                         <p>Horário: Segunda à sexta, das 8h às 20h (exceto feriados)</p>
                                     </div>
                                     <div class="mb-5 col-12 col-md-4 d-flex justify-content-around documents">
-                                        <div>
-                                            <i class="far fa-file-alt"></i>
-                                            <p>Documentação Necessária</p>
-                                        </div>
-                                        <div>
-                                            <i class="far fa-calendar"></i>
-                                            <p>Agende sua Validação</p>
-                                        </div>
+                                        <a href="https://www.certisign.com.br/certificado-digital/documentos-necessarios" target="_blank" title="Documentação Necessária">
+                                            <div>
+                                                <i class="far fa-file-alt"></i>
+                                                <p>Documentação Necessária</p>
+                                            </div>
+                                        </a>
+                                        <a href="https://www.certisign.com.br/duvidas-suporte/certificado-digital/agendamento" target="_blank" title="Agende sua Validação">
+                                            <div>
+                                                <i class="far fa-calendar"></i>
+                                                <p>Agende sua Validação</p>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="mb-0 col-12 col-md-4 text-md-right">
                                         <h6 class="mr-md-5 pr-md-5">Parceria com</h6>
