--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <span class="pipe"></span>
                         <p>Parceria Certisign</p>
                     </div>
-                    <a class="btn-default sm dark m-0" href="#" title="Compre agora">Compre agora</a>
+                    <a class="btn-default sm dark m-0" href="https://gestaoar.certisign.com.br/GestaoAR/cliente/produto/inicio?produto=SRFA1PJASSHV2&grupo=GRNEX&cliente_AR=CRSNT&origem=1&cod_rev=79935" target="_blank" title="Compre agora">Compre agora</a>
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
                             <span class="icon-ecnpj txt-orange f-size-100 line-height-0"><span class="d-none">e-CNPJ</span></span>
                             <h6>Certificado Digital CERTISIGN</h6>
                             <p class="prod-value"><span class="txt-black">Por apenas <span class="txt-detach">10x <span>R$ </span></span></span><span class="txt-orange">18<sup>,00</sup></span></p>
-                            <a class="btn-default d-block w-100 w-md-75" href="#" title="Compre agora">Compre agora</a>
+                            <a class="btn-default d-block w-100 w-md-75" href="https://gestaoar.certisign.com.br/GestaoAR/cliente/produto/inicio?produto=SRFA1PJASSHV2&grupo=GRNEX&cliente_AR=CRSNT&origem=1&cod_rev=79935" target="_blank" title="Compre agora">Compre agora</a>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a class="btn-default d-block w-100 d-md-inline w-md-auto" href="#" title="Compre agora">COMPRE AGORA O SEU E-CNPJ</a>
+                                    <a class="btn-default d-block w-100 d-md-inline w-md-auto" href="https://gestaoar.certisign.com.br/GestaoAR/cliente/produto/inicio?produto=SRFA1PJASSHV2&grupo=GRNEX&cliente_AR=CRSNT&origem=1&cod_rev=79935" target="_blank" title="Compre agora o seu e-cnpj">COMPRE AGORA O SEU E-CNPJ</a>
                                 </div>
                             </div>
                         </div>
